Dodawanie i wyświetlanie studentów

--- a/Studenci2/Studenci2.vcxproj
+++ b/Studenci2/Studenci2.vcxproj
@@ -115,6 +115,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Interface.h" />
+    <ClInclude Include="Manager.h" />
+    <ClInclude Include="Student.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Interface.cpp" />
+    <ClCompile Include="Manager.cpp" />
+    <ClCompile Include="Studenci.cpp" />
+    <ClCompile Include="Student.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
